some little code improvements along the way